--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "9.1.3",
+    "node-sass": "^4.13.0",
     "react": "16.11.0",
-    "react-dom": "16.11.0"
+    "react-dom": "16.11.0",
+    "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^12.12.7",
