--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.19.0",
     "next": "9.1.3",
+    "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
