--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,12 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".ts",
+          ".tsx"
+        ]
       }
     }
   },
@@ -43,10 +48,21 @@
       2,
       "never"
     ],
-    "jsx-a11y/no-static-element-interactions": [2 ,"never"],
-    "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
+    "jsx-a11y/no-static-element-interactions": [
+      2,
+      "never"
+    ],
+    "no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "args": "after-used",
+        "ignoreRestSiblings": false
+      }
+    ],
     "arrow-body-style": [
       2,
       "as-needed"
     ]
+  }
 }
