--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "9.1.3",
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.0",
+    "pouchdb": "^7.1.1",
+    "pouchdb-find": "^7.1.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-redux": "^7.1.3",
