--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "next": "9.1.3",
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.0",
@@ -21,7 +22,8 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "tailwindcss": "^1.1.3"
+    "tailwindcss": "^1.1.3",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.7",
