--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pouchdb-find": "^7.1.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-hook-form": "^3.27.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
