--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,7 @@
       "never"
     ],
     "no-unused-vars": ["warn"],
-    "max-len": [2, { "code": 200 }],
+    "max-len": [2, { "code": 200 , "ignoreStrings": true}],
     "jsx-a11y/no-static-element-interactions": 0,
     "jsx-a11y/no-noninteractive-element-interactions":0,
     "jsx-a11y/click-events-have-key-events":0,
