--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "tailwind:css": "tailwind build statics/styles/style.src.scss -c  statics/styles/tailwind.js -o statics/styles/style.scss",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
@@ -24,7 +25,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "tailwindcss": "^1.1.3",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "uuid4": "^1.1.4"
   },
   "devDependencies": {
     "@types/node": "^12.12.7",
