--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
+    "firebase": "^7.5.0",
     "moment": "^2.24.0",
     "next": "9.1.3",
     "next-redux-wrapper": "^4.0.1",
