--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "firebase": "^7.5.0",
+    "lunr": "^2.3.8",
     "moment": "^2.24.0",
     "next": "9.1.3",
+    "next-compose-plugins": "^2.2.0",
     "next-redux-wrapper": "^4.0.1",
+    "next-runtime-dotenv": "^1.2.0",
     "node-sass": "^4.13.0",
     "pouchdb": "^7.1.1",
     "pouchdb-find": "^7.1.1",
