--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "firebase": "^7.5.0",
+    "firebase-admin": "^8.9.0",
     "lunr": "^2.3.8",
     "moment": "^2.24.0",
     "next": "9.1.3",
