--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "redux-thunk": "^2.3.0",
     "tailwindcss": "^1.1.3",
     "underscore": "^1.9.1",
-    "uuid4": "^1.1.4"
+    "uuid4": "^1.1.4",
+    "voucher-code-generator": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.7",
