--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
   "name": "outtripper-app",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+    "transform": {
+      "^.+\\.ts?$": "babel-jest"
+    }
+  },
   "scripts": {
     "tailwind:css": "tailwind build statics/style/style.src.scss -c  statics/style/tailwind.js -o statics/style/style.scss",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.8.0",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
@@ -36,16 +45,28 @@
     "voucher-code-generator": "^1.1.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.8.0",
+    "@types/enzyme": "^3.10.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.25",
     "@types/node": "^12.12.7",
     "@types/react": "^16.9.11",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.9.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "typescript": "^3.7.2"
+    "jest": "^24.9.0",
+    "ts-jest": "^24.3.0",
+    "typescript": "^3.7.4"
   }
 }
