--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,6 +50,7 @@
       2,
       "never"
     ],
+    "react/button-has-type": ["error", {"reset": true}],
     "no-unused-vars": ["warn"],
     "max-len": [2, { "code": 200 , "ignoreStrings": true}],
     "jsx-a11y/no-static-element-interactions": 0,
