--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "outtripper-app",
+  "name": "faildeploy-test",
   "version": "0.1.0",
   "private": true,
   "jest": {
@@ -21,7 +21,6 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.8.0",
     "@zeit/next-css": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "firebase": "^7.5.0",
