--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
       "^.+\\.ts?$": "babel-jest"
     }
   },
+  "engines": {
+    "node": "10.x"
+  },
   "scripts": {
     "tailwind:main": "tailwind build statics/style/style.src.scss -c  statics/style/tailwind.js -o statics/style/style.css",
     "tailwind:customer": "tailwind build statics/style/customerapp.src.scss -c  statics/style/tailwind.js -o statics/style/customer.css",
@@ -31,7 +34,6 @@
     "next-compose-plugins": "^2.2.0",
     "next-redux-wrapper": "^4.0.1",
     "next-runtime-dotenv": "^1.2.0",
-    "node-sass": "^4.13.0",
     "pouchdb": "^7.1.1",
     "pouchdb-find": "^7.1.1",
     "react": "16.11.0",
