--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": "10.x"
   },
   "scripts": {
-    "tailwind:main": "tailwind build statics/style/style.src.scss -c  statics/style/tailwind.js -o statics/style/style.css",
+    "tailwind:main": "tailwind build statics/style/style.src.scss -c  statics/style/tailwind.js -o public/styles/style.css",
     "tailwind:customer": "tailwind build statics/style/customerapp.src.scss -c  statics/style/tailwind.js -o statics/style/customer.css",
     "dev": "next dev",
     "build": "next build",
@@ -31,6 +31,7 @@
     "moment": "^2.24.0",
     "next": "9.1.3",
     "next-compose-plugins": "^2.2.0",
+    "next-offline": "^5.0.0",
     "next-redux-wrapper": "^4.0.1",
     "next-runtime-dotenv": "^1.2.0",
     "react": "16.11.0",
