--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.0",
+    "clipboard": "^2.0.4",
     "dotenv": "^8.2.0",
     "firebase": "^7.6.2",
     "firebase-admin": "^8.9.0",
