--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "tailwind:main": "tailwind build statics/style/style.src.scss -c  statics/style/tailwind.js -o public/styles/style.css",
     "tailwind:customer": "tailwind build statics/style/customerapp.src.scss -c  statics/style/tailwind.js -o statics/style/customer.css",
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "export": "next export",
@@ -22,6 +22,8 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.0.2",
+    "@stripe/stripe-js": "^1.0.1",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.0",
     "clipboard": "^2.0.4",
@@ -42,6 +44,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "stripe": "^8.22.0",
     "tailwindcss": "^1.1.3",
     "underscore": "^1.9.1",
     "uuid4": "^1.1.4",
