--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "faildeploy-test",
+  "name": "outtripper",
   "version": "0.1.0",
   "private": true,
   "jest": {
@@ -32,7 +32,7 @@
     "firebase-admin": "^8.9.0",
     "lunr": "^2.3.8",
     "moment": "^2.24.0",
-    "next": "9.1.3",
+    "next": "9.2.2",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^5.0.0",
     "next-redux-wrapper": "^4.0.1",
